# MCP_CLIENT

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/client/: mcp_client.py
src/server/: example_server.py
